--- a/.travis.yml
+++ b/.travis.yml
@@ -9,22 +9,12 @@ matrix:
       before_install:
         - pip install flake8
         - pip install pylint
-      # after_success:
-        # - flake8 *.py
-        # - pylint *.py
+      after_success:
+        - flake8 --max-line-length 100 --ignore E402 *.py tests/*.py
 
     - os: linux
       env: SETUP="linux 3.6"
       python: 3.6
-
-    - os: osx
-      env: SETUP="osx"
-      language: generic
-      before_install:
-        - brew update
-        - brew install python3
-        - virtualenv env -p python3
-        - source env/bin/activate
 
 install:
 
