Fix pylint errors, tweak to get travis working

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,16 +4,16 @@ sudo: false
 matrix:
   include:
     - os: linux
-      env: SETUP="linux python 3.2"
+      env: SETUP="linux, python 3.2, flake8"
       python: 3.2
       before_install:
-        - pip install flake8
-        - pip install pylint
+        - pip3 install flake8
+        - pip3 install pylint
       after_success:
         - flake8 --max-line-length 100 --ignore E402 *.py tests/*.py
 
     - os: linux
-      env: SETUP="linux python 3.6"
+      env: SETUP="linux, python 3.6"
       python: 3.6
 
 install:
