--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,7 @@ matrix:
         - pip3 install flake8
         - pip3 install pylint
       after_success:
-        - flake8 --max-line-length 100 --ignore E402 *.py tests/*.py
-        # - pylint --disable=F0401,C0413,W0201 *.py tests/*.py
+        - flake8 --max-line-length 100 --ignore E402 --exclude pyte,stubs
     - os: linux
       env: SETUP="linux, python 3.6"
       python: 3.6
