Require sudo in travis builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: python
-sudo: false
+sudo: required
 
 matrix:
   include:
@@ -7,8 +7,8 @@ matrix:
       env: SETUP="linux, python 3.3, flake8"
       python: 3.3
       before_install:
-        - pip3 install flake8
-        - pip3 install pylint
+        - sudo pip3 install flake8
+        - sudo pip3 install pylint
       after_success:
         - flake8 --max-line-length 100 --ignore E402 --exclude pyte,stubs
     - os: linux
@@ -16,7 +16,7 @@ matrix:
       python: 3.6
 
 install:
-   - sudo apt-get install nano
+   - sudo apt-get install -y nano
 
 before_script:
    - uname -a
